Fix avatar image distortion in chats and contest sidebar

--- a/client/src/components/Chat/ChatComponents/ChatHeader/ChatHeader.module.sass
+++ b/client/src/components/Chat/ChatComponents/ChatHeader/ChatHeader.module.sass
@@ -38,6 +38,7 @@
         height: 44px
         width: 44px
         border-radius: 50%
+        object-fit: cover
       span
         display: inline-block
         overflow: hidden
