--- a/client/src/components/Chat/DialogComponents/DialogBox/DialogBox.module.sass
+++ b/client/src/components/Chat/DialogComponents/DialogBox/DialogBox.module.sass
@@ -60,3 +60,4 @@
     width: 46px
     height: 46px
     margin-left: 10px
+    object-fit: cover
