--- a/client/src/components/ContestSideBar/ContestSideBar.module.sass
+++ b/client/src/components/ContestSideBar/ContestSideBar.module.sass
@@ -24,6 +24,7 @@
         height: 40px
         border-radius: 20px
         margin-right: 20px
+        object-fit: cover
       .customerNameContainer
         display: flex
         flex-direction: column
